# vopu-management-backend

./: .gitignore  docker-compose.yml  pyproject.toml  vopu-management-backend.rar  vopu_postgres.sql
initializer/: main.py
src/crosscuting/: domain.py
src/crosscuting/exception/: vopu_exception.py
src/crosscuting/helpers/: boolean_helper.py  datetime_helper.py  float_helper.py  int_helper.py  order_helper.py  plate_helper.py  text_helper.py  uuid_helper.py
src/crosscuting/messages/: technical_messages_enum.py
src/features/cliente/add_cliente/application/input_port/: add_cliente_input_port.py
src/features/cliente/add_cliente/application/use_case/: add_cliente_use_case.py
src/infrastructure/http/: dependencies.py
src/infrastructure/http/controller/: cliente_controller.py
src/infrastructure/http/dto/: add_cliente_request.py  response.py
src/infrastructure/persistence/adapter/sqlmodel/: cliente_sqlmodel_adapter.py
src/infrastructure/persistence/adapter/sqlmodel/model/: cliente_sqlmodel.py
src/infrastructure/persistence/config/: database.py
src/infrastructure/persistence/repository/: cliente_repository.py
src/infrastructure/persistence/repository/entity/: cliente_entity.py
src/shared/: dto_assembler.py  entity_assembler.py  input_port.py  use_case.py
src/shared/rules/: rule.py  validator.py
src/shared/rules/generics/: boolean_is_valid_rule.py  id_is_not_default_rule.py  numeric_range_is_valid_rule.py  string_format_is_valid_rule.py  string_length_is_valid_rule.py  string_value_is_present_rule.py
(+8 files in other folders)
